chamber/styles/directory-base.css
* {
    --primary-color: #1C2C4B;
    --secondary-color: #1C75BB;
    --background-color: #959595 ;
    --accent-color: #F3BE3C;
    --text-color: #414042;
    --alternative-text-color: #fff;
    --footer-color: #dadada;

    font-family: 'Fira Sans', sans-serif;

    /* Basic reset */

    margin: 0;
    padding: 0;
    box-sizing: border-box;
  
  

}

html{
    box-sizing: border-box;
    height: 100%;
}

/* Small views as base for this project */

/* HEADER */

header{
    /* styling */
    color: var(--text-color);
    /* background-color: var(--background-color); */
    /* background-color: #F3BE3C; */

    /* position */
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-content: space-evenly;
    align-items: center;
}

#logo-picture{
    margin: 0 1rem;
}

nav{
    display: grid;
    grid-template-rows: 0fr;
    grid-column: 1/3;

    /* to smooth the transition */
    transition: grid-template-rows 0.5s ease-out;
}

/* This works only when user clicks the burguer button!!!! */
nav.open{
    grid-template-rows: 1fr;
}

/* end open */

ul.link-navigator{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center; /*This keeps the ul big box in the center, but not the words*/
    /* Hiddes the nav while is closed */
    overflow: hidden;

}


li a{
    text-decoration: none;
    color: var(--alternative-text-color);
    width: 100%;
    height: 100%;
    display: block;

    padding: 1em;
}

ul li{
    list-style-type: none;
    background-color: var(--text-color);
    width: 100%;
    text-align: end;
}

/* Change the color when hover */
ul.link-navigator li:hover{
    background-color: var(--accent-color);
}

li a:hover{
    color: var(--text-color);

}
/* end hover */

.buttons-box{
    display: flex;
    justify-content: flex-end;
    margin: 0 1.5rem;
}

#menu, #toggle-bg-color{
    font-size: 2rem;
    background: none;
    border: 0;
    color: var(--text-color);
    justify-self: end;
    margin: .3em;
    /* position: absolute; */
    /* top: 0.6rem;
    right: 1.7rem; */
    text-decoration: none;
    line-height: 10px;
}

ul.link-navigator a.active-link{
    /* current page open */
    text-decoration: underline;
    
}

#menu:hover, #toggle-bg-color:hover{
    /* adding a pointer to the buttons when hover */
    cursor: pointer;
}



/* MAIN */

main{
    /* same technique as the temple gallery */
    max-width: 75em;
    margin: 0 auto;
} 

main h1, main p{
    text-align: center;
    color: var(--text-color);
}


.views-buttons{
    display: flex;
    justify-content: center;
    margin: 2em 0;
}

.views-buttons button{
    background-color: var(--accent-color);
    color: var(--text-color);
    padding: 0.5em 1em;
    border: 0;
    margin: 0 0.5em;
    cursor: pointer;
    width: 10em;
}

.views-buttons button:hover{
    background-color: var(--secondary-color);
}

h2{
    font-size: large;
}

.card img{
    width: 100%;
    height: auto;
    max-width: 5em;
    max-height: 5em;
}

#cards{
    display: grid;
    
    gap: 1em;
    justify-items: center;
    align-items: center;
    margin: 2em 2em;
}

.card{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 1em;
    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.5);
    color: var(--text-color);
    width: 100%;
    height: 100%;
    text-align: center;
}

.card a{
    text-decoration: none;


}

/* List view */
#cards.list{
    display: flex;
    flex-direction: column;
    align-items: start;
    gap: 0;
}

#cards.list .card{
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    padding: 1em;
    color: var(--text-color);
    width: 100%;
    height: 100%;
    text-align: center;
    gap: 1em;
    box-shadow: none;
    color: var(--text-color);
}

.list .card:nth-child(even){
    background-color: var(--accent-color);
}

.list img, .list .membershipLevel{
    display: none;
}



/* FOOTER */

footer{
    display: flex;
    flex-direction: column;

    /* style */
    background-color: var(--footer-color);
    color: var(--text-color);
    padding: 1em ;
}

.links-footer-wrap{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;

}

.links-footer-wrap img{
    width: 6.25em;
    height: 6.25em;
}


/* MEDIA QUERIES */

@media screen and (min-width: 52em) {


    /* HEADER */
    
        /* Destroying the hamburguer button */
    
        header{
            display: flex;
            flex-direction: row;
            justify-content:space-between;
            height: 5em;
            /* flex: 1 1 100%; */
        }
    
        .logo-picture{
            justify-self: start;
        }
    
        .buttons-box{
            /* buttons box is direct son of the flex */
            order: 1;
        }
    
        #menu{
            display: none;
        }
    
    
        nav{
            display: flex;
            flex-direction: row;
            justify-content: end;
            order: 0;
            width: 100%;
            padding: 0 4rem;
        }
    
        ul.link-navigator{
            flex-direction: row;
        }
    
        ul.link-navigator li{
            background-color: #fff;
        }
        li a{
            color: var(--text-color);
            transition: color 0.25s ease;
            width: 100%;
            padding: 0 1.5em;
            font-weight: 500;
        }
    
        li a:hover{
            color: #F3BE3C;
        }
        ul.link-navigator li:hover{
            background-color: #fff;
            text-decoration: underline;
            text-decoration-color: var(--accent-color);
        }
    
        /* MAIN */
    
        #cards.list .card{
    
            justify-content: space-between;
        }
    
        #cards{
            grid-template-columns: repeat(auto-fit, minmax(23em, 1fr));
        }
    
        #cards.card img{
            width: 12.5em;
            height: auto;
        }
    
        /* FOOTER */
        footer{
            flex-direction: row;
            justify-content: space-between;
            padding: 1em 4rem;
        }
    
    }

